[gd_scene load_steps=5 format=3 uid="uid://b20pdcbc1ccy4"]

[ext_resource type="Script" uid="uid://qgalx6vk1ii0" path="res://scripts/menus/how_to_play.gd" id="1_88ieg"]
[ext_resource type="Shader" uid="uid://bu6gmyxs71e2l" path="res://scripts/shader/blur.gdshader" id="1_d4i75"]
[ext_resource type="FontFile" uid="uid://c50cxw1y1sjqs" path="res://assets/font/jmh_beda/JMH Beda.otf" id="3_uij2r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d4i75"]
shader = ExtResource("1_d4i75")
shader_parameter/amount = 1.48400007049

[node name="How_to_Play" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_88ieg")

[node name="Play_Canvas" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Play_Canvas"]
material = SubResource("ShaderMaterial_d4i75")
offset_left = -1825.0
offset_top = -579.0
offset_right = 4118.0
offset_bottom = 1528.0

[node name="Dieces" type="Control" parent="Play_Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Normal" type="Control" parent="Play_Canvas/Dieces"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_Normal" type="Label" parent="Play_Canvas/Dieces/Normal"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -565.5
offset_top = -151.25
offset_right = 565.5
offset_bottom = 151.25
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_uij2r")
theme_override_font_sizes/font_size = 32
text = "EACH DICE HAS A VALUE FROM 1 - 6 . EACH VALUE DEFINES HOW A PICE CAN MOVE FOR EXAMPEL AN DICE WITH AN 4 CAN MOVE 4 TIELS . WHEN YOU MOVE YOU ALWAYS CAN DECIED IF YOU WANT TO GO TO THE SIDE OF TO THE FRONT."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="King" type="Control" parent="Play_Canvas/Dieces"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_King" type="Label" parent="Play_Canvas/Dieces/King"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -551.0
offset_top = -24.5
offset_right = 564.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_uij2r")
theme_override_font_sizes/font_size = 32
text = "THE KING IS A SPECIAL TYPE OF CARACTER HE CAN ONLY MOVE ONE TILE AT A TIME."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Board" type="Control" parent="Play_Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_Board" type="Label" parent="Play_Canvas/Board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.0
offset_top = -24.5
offset_right = 358.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_uij2r")
theme_override_font_sizes/font_size = 32
text = "THE BOARD IS A 9 BY 9 FIELD WHERE DICES ARE PLACED ."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Ruels" type="Control" parent="Play_Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_Ruels" type="Label" parent="Play_Canvas/Ruels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_uij2r")
theme_override_font_sizes/font_size = 32
text = "1.   THE GAME ENDS WHEN A PLAYER HAS NO PICES 
2.   EACH PLAYER CAN ONLY MOVE ONE PICES AT A TIME 
3.   YOU WIN IF THE ENEMY HAS NO PIECES LEFT
4.   YOU CAN ONLY MOVE IF IT IS YOUR TURN 
5.    HAVE FUN IN PLAYING 
6.   REPORT BUGS TO THE GITHUB
7.   EVERY BUG IS A FEATURE "

[node name="Next" type="Button" parent="Play_Canvas"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -61.0
offset_right = 65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_uij2r")
theme_override_font_sizes/font_size = 32
text = "NEXT"

[node name="Exit" type="Button" parent="Play_Canvas"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -61.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_uij2r")
theme_override_font_sizes/font_size = 32
text = "EXIT"

[node name="How_to_Play" type="Label" parent="Play_Canvas"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -355.5
offset_right = 355.5
offset_bottom = 28.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_uij2r")
theme_override_font_sizes/font_size = 32
text = "HOW TO PLAY ?"
horizontal_alignment = 1

[connection signal="pressed" from="Play_Canvas/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Play_Canvas/Exit" to="." method="_on_exit_pressed"]
